追蹤動畫調整

--- a/zh-Hans.lproj/Localizable.strings
+++ b/zh-Hans.lproj/Localizable.strings
@@ -42,3 +42,5 @@
 "LET'S PARTY DAY" = "一起聊天吧...";
 "SEARCH RESULT" = "搜寻结果";
 "HOT" = "热门推荐";
+"NO SIGNIN" = "尚未登入";
+"PRESENT TO SIGNIN PAGE" = "要前往登入页面吗？";
