--- a/zh-Hant.lproj/Localizable.strings
+++ b/zh-Hant.lproj/Localizable.strings
@@ -42,3 +42,5 @@
 "LET'S PARTY DAY" = "一起聊天吧...";
 "SEARCH RESULT" = "搜尋結果";
 "HOT" = "熱門推薦";
+"NO SIGNIN" = "尚未登入";
+"PRESENT TO SIGNIN PAGE" = "要前往登入頁面嗎？";
